# eeml-2026-application

./: .gitignore  CLUSTER_SETUP.md  README.md  analysis.md  doc1_methodology_context.md  eeml-gen-kuramoto.yaml  eeml-gen.yaml  eeml.yaml  eeml_extended_abstract.fdb_latexmk  eeml_extended_abstract.fls  eeml_extended_abstract.md  eeml_extended_abstract.tex  eeml_extended_abstract_draft.md  eeml_extended_abstract_draft.tex  eeml_extended_abstract_draft_wide.tex  eeml_extended_abstract_prose.fdb_latexmk  eeml_extended_abstract_prose.fls  eeml_extended_abstract_prose.md  eeml_extended_abstract_prose.tex  eeml_extended_abstract_v3.tex  eeml_extended_abstract_v4.tex  figure_spec.md  figures-2.ipynb  figures.ipynb  full_paper_draft.md  icml_template.tex  icml_template_wide.tex  id_ed25519.pub  latent_edge_model.py  literature_references.md  pyproject.toml  references.bib  visualization.py
files/: doc1_methodology_context.md  doc2_extension_scaffold.md
motivation/: EEML 2026 Personal Statement.docx  ~$am a PhD student at the University of Sydney with a research focus in feature.docx
results/: sample_efficiency_bciciv2a_ablation_5seeds_results.json  sample_efficiency_bciciv2a_pilot_5seeds_results.json  sample_efficiency_bciciv2a_subj0_5seeds_results.json  sample_efficiency_bciciv2a_subj0_ablation_5seeds_results.json  sample_efficiency_bciciv2a_subj1_5seeds_results.json  sample_efficiency_bciciv2a_subj2_5seeds_results.json  sample_efficiency_definitive_new_results.json  sample_efficiency_definitive_results.json  sample_efficiency_definitive_w60_cpu_results.json  (+35 more)
src/: model.py  (+7 more)
